Made the hamburger menu more visible. Fixed the '//' warning when using a LinkButton to go to the Home page.

--- a/src/CSS/Contact.css
+++ b/src/CSS/Contact.css
@@ -17,12 +17,21 @@
     flex-direction: row;
     column-gap: 10vw;
 }
+.navigationbar_background{
+    display: none;
+}
 
 @media screen and (max-width: 600px) {
     .MainContainer_Contact {
         width: 95%;
         margin-top: 0;
         height: 80vh;
+    }
+    .navigationbar_background{
+        display: block;
+        width: 100%;
+        height: 10vh;
+        background-color: #2596be;
     }
     .CardContainer_Contact {
         width: 100%;
